--- a/CadastroFilmes/appsettings.json
+++ b/CadastroFilmes/appsettings.json
@@ -5,5 +5,8 @@
     }
   },
   "AllowedHosts": "*",
-  "Mensagem": "Ola td blz?" 
+  "Mensagem": "Ola td blz?",
+  "ConnectionStrings": {
+    "conn": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=filmesdb;Integrated Security=True;"
+  }
 }
